--- a/index1.html
+++ b/index1.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sample</title>
+    <title>Sample1</title>
 </head>
 <body>
-    This is just a test...
+    updated the file...
 </body>
 </html>
